url Redirection working

--- a/movieDetails.html
+++ b/movieDetails.html
@@ -1,5 +1,5 @@
 <div id="movie-details">
-  <h1 class="text-center"><!--TODO #4: Show the movie title here--></h1>
+  <h1 class="text-center">{{ctrl.title}}</h1>
   <div class="row">
     <div class="col-xs-5">
       <!--TODO #4: Show the movie poster image here-->
