--- a/movieList.html
+++ b/movieList.html
@@ -13,7 +13,7 @@
     </form>
     <!--TODO #3: repeat this div for each movie-->
     <div ng-repeat="obj in ctrl.movieList" ng-click="ctrl.crick(obj.imdbID)">
-    {{obj}}
+    <!-- {{obj}} -->
         <!--TODO #4: When the user clicks a movie take them to the details page for that movie-->
         <!--TODO #5: Only show movies where the title matches what the user typed into the search box-->
         <!--TODO #6: Sort the movies based on what the user selects in the sort dropdown-->
